--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,10 @@ body, html{
   height:100%;
 }
 body{
-  margin: 0px;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   background-color:#444;
   font-size: 18px;
 }
@@ -24,4 +27,51 @@ body, a:link, a:visited, a:active{
   border:10px solid red;
   border-radius:10px;
   position:absolute;
+}
+.largeObject{
+  height: 100px;
+  width: 100px;
+  border-radius: 100px;
+}
+.disco{
+  display: block;
+  background: url('discoball.png');
+  border-radius: 50%;
+  height: 302px;
+  width: 300px;
+  margin: 0;
+}
+.x{
+	-webkit-animation: x 10s linear infinite alternate;
+  -moz-animation: x 10s linear infinite alternate;
+	animation: x 10s linear infinite alternate;
+}
+.y{
+	-webkit-animation: y 5s linear infinite alternate;
+  -moz-animation: y 5s linear infinite alternate;
+	animation: y 5s linear infinite alternate;
+}
+@-webkit-keyframes x{
+   100% {
+   -webkit-transform: translateX(calc(100vw - 300px));
+   transform: translateX(calc(100vw - 300px));
+  }
+}
+@keyframes x{
+   100% {
+   -webkit-transform: translateX(calc(100vw - 300px));
+   transform: translateX(calc(100vw - 300px));
+  }
+}
+@-webkit-keyframes y{
+   100% {
+   -webkit-transform: translateY(calc(100vh - 300px));
+   transform: translateY(calc(100vh - 300px));
+  }
+}
+@keyframes y{
+   100% {
+   -webkit-transform: translateY(calc(100vh - 300px));
+   transform: translateY(calc(100vh - 300px));
+  }
 }
