--- a/styles.css
+++ b/styles.css
@@ -3,21 +3,25 @@ body, html{
 }
 body{
   margin: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  background-color:#444;
+  background-color:black;
   font-size: 18px;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
 }
-.title, .addDancerButton{
-  padding:5px 12px;
-  float:right;
+.title, .addDancerButton, .changeDancerButton, .textHint, .stopTheParty{
+  text-decoration: none;
+  padding:10px 12px;
+  float:left;
+}
+.addDancerButton:hover, .changeDancerButton:hover, .textHint:hover, .stopTheParty:hover{
+  text-decoration: none;
+  background-color: white;
+  color: black;
 }
 .topbar{
-  height:32px;
+  height:42px;
   background-color: #555;
 }
 .title{
@@ -28,6 +32,10 @@ body, a:link, a:visited, a:active{
   border-radius:10px;
   position:absolute;
 }
+.squareDancer{
+  border:10px solid red;
+  position:absolute;
+}
 .largeObject{
   height: 100px;
   width: 100px;
@@ -35,21 +43,21 @@ body, a:link, a:visited, a:active{
 }
 .disco{
   display: block;
-  background: url('discoball.png');
+  background-image: url("discoball.png");
   border-radius: 50%;
   height: 302px;
   width: 300px;
   margin: 0;
 }
 .x{
-	-webkit-animation: x 10s linear infinite alternate;
+  -webkit-animation: x 10s linear infinite alternate;
   -moz-animation: x 10s linear infinite alternate;
-	animation: x 10s linear infinite alternate;
+  animation: x 10s linear infinite alternate;
 }
 .y{
-	-webkit-animation: y 5s linear infinite alternate;
+  -webkit-animation: y 5s linear infinite alternate;
   -moz-animation: y 5s linear infinite alternate;
-	animation: y 5s linear infinite alternate;
+  animation: y 5s linear infinite alternate;
 }
 @-webkit-keyframes x{
    100% {
