--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,11 @@ body, html{
   height:100%;
 }
 body{
-  margin: 0;
+  margin: 0 auto;
   background-color:black;
   font-size: 18px;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-align: center;
 }
 body, a:link, a:visited, a:active{
   color: lightblue;
